--- a/web/config/config.yaml
+++ b/web/config/config.yaml
@@ -114,6 +114,10 @@ orderers:
     url: localhost:7050
     grpcOptions:
       ssl-target-name-override: orderer0.cfginfo.com
+      keep-alive-time: 0s
+      keep-alive-timeout: 20s
+      keep-alive-permit: false
+      fail-fast: false
       allow-insecure: false
     tlsCACerts:
       path: ${GOPATH}/src/blockchain-database/fixtures/crypto-config/ordererOrganizations/cfginfo.com/orderers/orderer0.cfginfo.com/msp/tlscacerts/tlsca.cfginfo.com-cert.pem
@@ -122,6 +126,10 @@ orderers:
     url: localhost:8050
     grpcOptions:
       ssl-target-name-override: orderer1.cfginfo.com
+      keep-alive-time: 0s
+      keep-alive-timeout: 20s
+      keep-alive-permit: false
+      fail-fast: false
       allow-insecure: false
     tlsCACerts:
       path: ${GOPATH}/src/blockchain-database/fixtures/crypto-config/ordererOrganizations/cfginfo.com/orderers/orderer1.cfginfo.com/msp/tlscacerts/tlsca.cfginfo.com-cert.pem
@@ -130,6 +138,10 @@ orderers:
     url: localhost:9050
     grpcOptions:
       ssl-target-name-override: orderer2.cfginfo.com
+      keep-alive-time: 0s
+      keep-alive-timeout: 20s
+      keep-alive-permit: false
+      fail-fast: false
       allow-insecure: false
     tlsCACerts:
       path: ${GOPATH}/src/blockchain-database/fixtures/crypto-config/ordererOrganizations/cfginfo.com/orderers/orderer2.cfginfo.com/msp/tlscacerts/tlsca.cfginfo.com-cert.pem
@@ -140,6 +152,10 @@ peers:
     url: localhost:7051
     grpcOptions:
       ssl-target-name-override: peer0.org1.cfginfo.com
+      keep-alive-time: 0s
+      keep-alive-timeout: 20s
+      keep-alive-permit: false
+      fail-fast: false
       allow-insecure: false
     tlsCACerts:
       path: ${GOPATH}/src/blockchain-database/fixtures/crypto-config/peerOrganizations/org1.cfginfo.com/tlsca/tlsca.org1.cfginfo.com-cert.pem
@@ -148,6 +164,10 @@ peers:
     url: localhost:8051
     grpcOptions:
       ssl-target-name-override: peer1.org1.cfginfo.com
+      keep-alive-time: 0s
+      keep-alive-timeout: 20s
+      keep-alive-permit: false
+      fail-fast: false
       allow-insecure: false
     tlsCACerts:
       path: ${GOPATH}/src/blockchain-database/fixtures/crypto-config/peerOrganizations/org1.cfginfo.com/tlsca/tlsca.org1.cfginfo.com-cert.pem
@@ -156,6 +176,10 @@ peers:
     url: localhost:9051
     grpcOptions:
       ssl-target-name-override: peer0.org2.cfginfo.com
+      keep-alive-time: 0s
+      keep-alive-timeout: 20s
+      keep-alive-permit: false
+      fail-fast: false
       allow-insecure: false
     tlsCACerts:
       path: ${GOPATH}/src/blockchain-database/fixtures/crypto-config/peerOrganizations/org2.cfginfo.com/tlsca/tlsca.org2.cfginfo.com-cert.pem
@@ -164,6 +188,10 @@ peers:
     url: localhost:10051
     grpcOptions:
       ssl-target-name-override: peer1.org2.cfginfo.com
+      keep-alive-time: 0s
+      keep-alive-timeout: 20s
+      keep-alive-permit: false
+      fail-fast: false
       allow-insecure: false
     tlsCACerts:
       path: ${GOPATH}/src/blockchain-database/fixtures/crypto-config/peerOrganizations/org2.cfginfo.com/tlsca/tlsca.org2.cfginfo.com-cert.pem
